@@ -8,6 +8,7 @@ installation-guide (2008xxxx) UNRELEASED; urgency=low
   * Use /dev/sda and /dev/sdb in the RAID preseeding example rather than
     /dev/discs/disc0/disc and /dev/discs/disc1/disc, since the latter
     devices no longer exist.
+  * Document noshell boot parameter.
 
   [ Frans Pop ]
   * Document preseeding of network-console now that its postinst can be
